fix: change overflow property to auto for task dialog container

--- a/src/app/features/dashboard/kanban-dialog/kanban-dialog.component.scss
+++ b/src/app/features/dashboard/kanban-dialog/kanban-dialog.component.scss
@@ -10,7 +10,7 @@
   padding: 0 !important;
   max-width: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .task-card {
